[gd_scene load_steps=5 format=3 uid="uid://dnyxwwl2qb7c0"]

[ext_resource type="Script" path="res://minijeu_8/Game1.gd" id="1_me0hd"]
[ext_resource type="Texture2D" uid="uid://j6eo74hlhl5v" path="res://minijeu_8/figures/bench.png" id="2_ynpfq"]
[ext_resource type="PackedScene" uid="uid://rc8tsreyb7q1" path="res://minijeu_8/mouse.tscn" id="4_fsxno"]
[ext_resource type="PackedScene" uid="uid://coasydelfxf46" path="res://clock.tscn" id="4_opjil"]

[node name="game1" type="Node"]
script = ExtResource("1_me0hd")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -567.0
offset_top = -330.0
offset_right = 585.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="Clipart-desk-testing-13-1000086389" type="Sprite2D" parent="MarginContainer"]
position = Vector2(550.5, 315)
scale = Vector2(0.241227, 0.241404)
texture = ExtResource("2_ynpfq")

[node name="Scorelabel" type="Label" parent="MarginContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Clean the lab with the sponge/Nettoie le labeau avec l'eponge"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mouse" parent="MarginContainer" instance=ExtResource("4_fsxno")]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="clock" parent="." instance=ExtResource("4_opjil")]
visible = false

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="explanation" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.00392157, 0.745098, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 30

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -38.5
offset_right = 63.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start
"

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -77.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
